// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LogServer: get /runs ('host' / 'sqlite') > returns a 200 with all runs 1`] = `
{
  "data": [
    {
      "attributes": {
        "lastLogNumber": 2,
        "missingLogNumbers": [
          3,
        ],
        "name": "run-1",
        "status": "running",
      },
      "id": "1",
      "relationships": {
        "experiment": {
          "data": {
            "id": "1",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [
            {
              "id": "2",
              "type": "logs",
            },
          ],
        },
      },
      "type": "runs",
    },
    {
      "attributes": {
        "lastLogNumber": 1,
        "missingLogNumbers": [],
        "name": "run-2",
        "status": "running",
      },
      "id": "2",
      "relationships": {
        "experiment": {
          "data": {
            "id": "1",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [
            {
              "id": "5",
              "type": "logs",
            },
          ],
        },
      },
      "type": "runs",
    },
  ],
}
`;

exports[`LogServer: get /runs ('host' / 'sqlite') > returns a 200 with all runs with requested related experiment 1`] = `
{
  "data": [
    {
      "attributes": {
        "lastLogNumber": 2,
        "missingLogNumbers": [
          3,
        ],
        "name": "run-1",
        "status": "running",
      },
      "id": "1",
      "relationships": {
        "experiment": {
          "data": {
            "id": "2",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [
            {
              "id": "2",
              "type": "logs",
            },
          ],
        },
      },
      "type": "runs",
    },
    {
      "attributes": {
        "lastLogNumber": 0,
        "missingLogNumbers": [],
        "name": "run-2",
        "status": "completed",
      },
      "id": "2",
      "relationships": {
        "experiment": {
          "data": {
            "id": "2",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [],
        },
      },
      "type": "runs",
    },
    {
      "attributes": {
        "lastLogNumber": 1,
        "missingLogNumbers": [],
        "name": null,
        "status": "running",
      },
      "id": "3",
      "relationships": {
        "experiment": {
          "data": {
            "id": "3",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [
            {
              "id": "5",
              "type": "logs",
            },
          ],
        },
      },
      "type": "runs",
    },
  ],
  "included": [
    {
      "attributes": {
        "name": "experiment-1",
      },
      "id": "2",
      "type": "experiments",
    },
    {
      "attributes": {
        "name": "experiment-2",
      },
      "id": "3",
      "type": "experiments",
    },
  ],
}
`;

exports[`LogServer: get /runs ('host' / 'sqlite') > returns a 200 with all runs with requested related lastLogs 1`] = `
{
  "data": [
    {
      "attributes": {
        "lastLogNumber": 2,
        "missingLogNumbers": [
          3,
        ],
        "name": "run-1",
        "status": "running",
      },
      "id": "1",
      "relationships": {
        "experiment": {
          "data": {
            "id": "2",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [
            {
              "id": "2",
              "type": "logs",
            },
          ],
        },
      },
      "type": "runs",
    },
    {
      "attributes": {
        "lastLogNumber": 0,
        "missingLogNumbers": [],
        "name": "run-2",
        "status": "completed",
      },
      "id": "2",
      "relationships": {
        "experiment": {
          "data": {
            "id": "2",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [],
        },
      },
      "type": "runs",
    },
    {
      "attributes": {
        "lastLogNumber": 1,
        "missingLogNumbers": [],
        "name": null,
        "status": "running",
      },
      "id": "3",
      "relationships": {
        "experiment": {
          "data": {
            "id": "3",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [
            {
              "id": "5",
              "type": "logs",
            },
          ],
        },
      },
      "type": "runs",
    },
  ],
  "included": [
    {
      "attributes": {
        "logType": "log-type",
        "number": 2,
        "values": {
          "v": "r1l2",
        },
      },
      "id": "2",
      "relationships": {
        "run": {
          "data": {
            "id": "1",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
    {
      "attributes": {
        "logType": "log-type",
        "number": 1,
        "values": {
          "v": "r3l1",
        },
      },
      "id": "5",
      "relationships": {
        "run": {
          "data": {
            "id": "3",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
  ],
}
`;

exports[`LogServer: get /runs ('host' / 'sqlite') > returns a 200 with all runs with requested related lastLogs 2`] = `
{
  "data": [
    {
      "attributes": {
        "lastLogNumber": 2,
        "missingLogNumbers": [
          3,
        ],
        "name": "run-1",
        "status": "running",
      },
      "id": "1",
      "relationships": {
        "experiment": {
          "data": {
            "id": "2",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [
            {
              "id": "2",
              "type": "logs",
            },
          ],
        },
      },
      "type": "runs",
    },
    {
      "attributes": {
        "lastLogNumber": 0,
        "missingLogNumbers": [],
        "name": "run-2",
        "status": "completed",
      },
      "id": "2",
      "relationships": {
        "experiment": {
          "data": {
            "id": "2",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [],
        },
      },
      "type": "runs",
    },
    {
      "attributes": {
        "lastLogNumber": 1,
        "missingLogNumbers": [],
        "name": null,
        "status": "running",
      },
      "id": "3",
      "relationships": {
        "experiment": {
          "data": {
            "id": "3",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [
            {
              "id": "5",
              "type": "logs",
            },
          ],
        },
      },
      "type": "runs",
    },
  ],
  "included": [
    {
      "attributes": {
        "name": "experiment-1",
      },
      "id": "2",
      "type": "experiments",
    },
    {
      "attributes": {
        "name": "experiment-2",
      },
      "id": "3",
      "type": "experiments",
    },
    {
      "attributes": {
        "logType": "log-type",
        "number": 2,
        "values": {
          "v": "r1l2",
        },
      },
      "id": "2",
      "relationships": {
        "run": {
          "data": {
            "id": "1",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
    {
      "attributes": {
        "logType": "log-type",
        "number": 1,
        "values": {
          "v": "r3l1",
        },
      },
      "id": "5",
      "relationships": {
        "run": {
          "data": {
            "id": "3",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
  ],
}
`;

exports[`LogServer: get /runs ('participant' / 'sqlite') > returns a 200 with participant-owned runs 1`] = `
{
  "data": [
    {
      "attributes": {
        "lastLogNumber": 2,
        "missingLogNumbers": [
          3,
        ],
        "name": "run-1",
        "status": "running",
      },
      "id": "1",
      "relationships": {
        "experiment": {
          "data": {
            "id": "1",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [
            {
              "id": "2",
              "type": "logs",
            },
          ],
        },
      },
      "type": "runs",
    },
  ],
}
`;

exports[`LogServer: get /runs ('participant' / 'sqlite') > returns a 200 with participant-owned runs with requested related experiment 1`] = `
{
  "data": [
    {
      "attributes": {
        "lastLogNumber": 2,
        "missingLogNumbers": [
          3,
        ],
        "name": "run-1",
        "status": "running",
      },
      "id": "1",
      "relationships": {
        "experiment": {
          "data": {
            "id": "2",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [
            {
              "id": "2",
              "type": "logs",
            },
          ],
        },
      },
      "type": "runs",
    },
  ],
  "included": [
    {
      "attributes": {
        "name": "experiment-1",
      },
      "id": "2",
      "type": "experiments",
    },
  ],
}
`;

exports[`LogServer: get /runs ('participant' / 'sqlite') > returns a 200 with participant-owned runs with requested related lastLogs 1`] = `
{
  "data": [
    {
      "attributes": {
        "lastLogNumber": 2,
        "missingLogNumbers": [
          3,
        ],
        "name": "run-1",
        "status": "running",
      },
      "id": "1",
      "relationships": {
        "experiment": {
          "data": {
            "id": "2",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [
            {
              "id": "2",
              "type": "logs",
            },
          ],
        },
      },
      "type": "runs",
    },
  ],
  "included": [
    {
      "attributes": {
        "logType": "log-type",
        "number": 2,
        "values": {
          "v": "r1l2",
        },
      },
      "id": "2",
      "relationships": {
        "run": {
          "data": {
            "id": "1",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
  ],
}
`;

exports[`LogServer: get /runs ('participant' / 'sqlite') > returns a 200 with participant-owned runs with requested related lastLogs 2`] = `
{
  "data": [
    {
      "attributes": {
        "lastLogNumber": 2,
        "missingLogNumbers": [
          3,
        ],
        "name": "run-1",
        "status": "running",
      },
      "id": "1",
      "relationships": {
        "experiment": {
          "data": {
            "id": "2",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [
            {
              "id": "2",
              "type": "logs",
            },
          ],
        },
      },
      "type": "runs",
    },
  ],
  "included": [
    {
      "attributes": {
        "name": "experiment-1",
      },
      "id": "2",
      "type": "experiments",
    },
    {
      "attributes": {
        "logType": "log-type",
        "number": 2,
        "values": {
          "v": "r1l2",
        },
      },
      "id": "2",
      "relationships": {
        "run": {
          "data": {
            "id": "1",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
  ],
}
`;

exports[`LogServer: patch /runs/:run ('host' / 'sqlite') > refuses to change the status of a run from 'canceled' to 'completed' 1`] = `
{
  "errors": [
    {
      "code": "INVALID_STATUS_TRANSITION",
      "detail": "Cannot change run status. Run status canceled is terminal.",
      "status": "Forbidden",
    },
  ],
}
`;

exports[`LogServer: patch /runs/:run ('host' / 'sqlite') > refuses to change the status of a run from 'canceled' to 'idle' 1`] = `
{
  "errors": [
    {
      "code": "INVALID_STATUS_TRANSITION",
      "detail": "Cannot change run status. Run status canceled is terminal.",
      "status": "Forbidden",
    },
  ],
}
`;

exports[`LogServer: patch /runs/:run ('host' / 'sqlite') > refuses to change the status of a run from 'canceled' to 'interrupted' 1`] = `
{
  "errors": [
    {
      "code": "INVALID_STATUS_TRANSITION",
      "detail": "Cannot change run status. Run status canceled is terminal.",
      "status": "Forbidden",
    },
  ],
}
`;

exports[`LogServer: patch /runs/:run ('host' / 'sqlite') > refuses to change the status of a run from 'canceled' to 'running' 1`] = `
{
  "errors": [
    {
      "code": "INVALID_STATUS_TRANSITION",
      "detail": "Cannot change run status. Run status canceled is terminal.",
      "status": "Forbidden",
    },
  ],
}
`;

exports[`LogServer: patch /runs/:run ('host' / 'sqlite') > refuses to change the status of a run from 'completed' to 'idle' 1`] = `
{
  "errors": [
    {
      "code": "INVALID_STATUS_TRANSITION",
      "detail": "Cannot change run status from completed to idle. Allowed transitions are: completed -> canceled.",
      "status": "Forbidden",
    },
  ],
}
`;

exports[`LogServer: patch /runs/:run ('host' / 'sqlite') > refuses to change the status of a run from 'completed' to 'interrupted' 1`] = `
{
  "errors": [
    {
      "code": "INVALID_STATUS_TRANSITION",
      "detail": "Cannot change run status from completed to interrupted. Allowed transitions are: completed -> canceled.",
      "status": "Forbidden",
    },
  ],
}
`;

exports[`LogServer: patch /runs/:run ('host' / 'sqlite') > refuses to change the status of a run from 'completed' to 'running' 1`] = `
{
  "errors": [
    {
      "code": "INVALID_STATUS_TRANSITION",
      "detail": "Cannot change run status from completed to running. Allowed transitions are: completed -> canceled.",
      "status": "Forbidden",
    },
  ],
}
`;

exports[`LogServer: patch /runs/:run ('host' / 'sqlite') > refuses to change the status of a run from 'idle' to 'completed' 1`] = `
{
  "errors": [
    {
      "code": "INVALID_STATUS_TRANSITION",
      "detail": "Cannot change run status from idle to completed. Allowed transitions are: idle -> running or idle -> canceled.",
      "status": "Forbidden",
    },
  ],
}
`;

exports[`LogServer: patch /runs/:run ('host' / 'sqlite') > refuses to change the status of a run from 'idle' to 'interrupted' 1`] = `
{
  "errors": [
    {
      "code": "INVALID_STATUS_TRANSITION",
      "detail": "Cannot change run status from idle to interrupted. Allowed transitions are: idle -> running or idle -> canceled.",
      "status": "Forbidden",
    },
  ],
}
`;

exports[`LogServer: patch /runs/:run ('host' / 'sqlite') > refuses to change the status of a run from 'interrupted' to 'completed' 1`] = `
{
  "errors": [
    {
      "code": "INVALID_STATUS_TRANSITION",
      "detail": "Cannot change run status from interrupted to completed. Allowed transitions are: interrupted -> running or interrupted -> canceled.",
      "status": "Forbidden",
    },
  ],
}
`;

exports[`LogServer: patch /runs/:run ('host' / 'sqlite') > refuses to change the status of a run from 'interrupted' to 'idle' 1`] = `
{
  "errors": [
    {
      "code": "INVALID_STATUS_TRANSITION",
      "detail": "Cannot change run status from interrupted to idle. Allowed transitions are: interrupted -> running or interrupted -> canceled.",
      "status": "Forbidden",
    },
  ],
}
`;

exports[`LogServer: patch /runs/:run ('host' / 'sqlite') > refuses to change the status of a run from 'running' to 'idle' 1`] = `
{
  "errors": [
    {
      "code": "INVALID_STATUS_TRANSITION",
      "detail": "Cannot change run status from running to idle. Allowed transitions are: running -> interrupted, running -> canceled, or running -> completed.",
      "status": "Forbidden",
    },
  ],
}
`;

exports[`LogServer: patch /runs/:run ('host' / 'sqlite') > refuses to complete a run if there are pending logs 1`] = `
{
  "errors": [
    {
      "code": "PENDING_LOGS",
      "detail": "Cannot complete run with pending logs. Ensure all logs are added to the run before completing it.",
      "status": "Forbidden",
    },
  ],
}
`;

exports[`LogServer: patch /runs/:run ('participant' / 'sqlite') > refuses to change the status of a run from 'canceled' to 'completed' 1`] = `
{
  "errors": [
    {
      "code": "INVALID_STATUS_TRANSITION",
      "detail": "Cannot change run status. Run status canceled is terminal.",
      "status": "Forbidden",
    },
  ],
}
`;

exports[`LogServer: patch /runs/:run ('participant' / 'sqlite') > refuses to change the status of a run from 'canceled' to 'idle' 1`] = `
{
  "errors": [
    {
      "code": "INVALID_STATUS_TRANSITION",
      "detail": "Cannot change run status. Run status canceled is terminal.",
      "status": "Forbidden",
    },
  ],
}
`;

exports[`LogServer: patch /runs/:run ('participant' / 'sqlite') > refuses to change the status of a run from 'canceled' to 'interrupted' 1`] = `
{
  "errors": [
    {
      "code": "INVALID_STATUS_TRANSITION",
      "detail": "Cannot change run status. Run status canceled is terminal.",
      "status": "Forbidden",
    },
  ],
}
`;

exports[`LogServer: patch /runs/:run ('participant' / 'sqlite') > refuses to change the status of a run from 'canceled' to 'running' 1`] = `
{
  "errors": [
    {
      "code": "INVALID_STATUS_TRANSITION",
      "detail": "Cannot change run status. Run status canceled is terminal.",
      "status": "Forbidden",
    },
  ],
}
`;

exports[`LogServer: patch /runs/:run ('participant' / 'sqlite') > refuses to change the status of a run from 'completed' to 'idle' 1`] = `
{
  "errors": [
    {
      "code": "INVALID_STATUS_TRANSITION",
      "detail": "Cannot change run status from completed to idle. Allowed transitions are: completed -> canceled.",
      "status": "Forbidden",
    },
  ],
}
`;

exports[`LogServer: patch /runs/:run ('participant' / 'sqlite') > refuses to change the status of a run from 'completed' to 'interrupted' 1`] = `
{
  "errors": [
    {
      "code": "INVALID_STATUS_TRANSITION",
      "detail": "Cannot change run status from completed to interrupted. Allowed transitions are: completed -> canceled.",
      "status": "Forbidden",
    },
  ],
}
`;

exports[`LogServer: patch /runs/:run ('participant' / 'sqlite') > refuses to change the status of a run from 'completed' to 'running' 1`] = `
{
  "errors": [
    {
      "code": "INVALID_STATUS_TRANSITION",
      "detail": "Cannot change run status from completed to running. Allowed transitions are: completed -> canceled.",
      "status": "Forbidden",
    },
  ],
}
`;

exports[`LogServer: patch /runs/:run ('participant' / 'sqlite') > refuses to change the status of a run from 'idle' to 'completed' 1`] = `
{
  "errors": [
    {
      "code": "INVALID_STATUS_TRANSITION",
      "detail": "Cannot change run status from idle to completed. Allowed transitions are: idle -> running or idle -> canceled.",
      "status": "Forbidden",
    },
  ],
}
`;

exports[`LogServer: patch /runs/:run ('participant' / 'sqlite') > refuses to change the status of a run from 'idle' to 'interrupted' 1`] = `
{
  "errors": [
    {
      "code": "INVALID_STATUS_TRANSITION",
      "detail": "Cannot change run status from idle to interrupted. Allowed transitions are: idle -> running or idle -> canceled.",
      "status": "Forbidden",
    },
  ],
}
`;

exports[`LogServer: patch /runs/:run ('participant' / 'sqlite') > refuses to change the status of a run from 'interrupted' to 'completed' 1`] = `
{
  "errors": [
    {
      "code": "INVALID_STATUS_TRANSITION",
      "detail": "Cannot change run status from interrupted to completed. Allowed transitions are: interrupted -> running or interrupted -> canceled.",
      "status": "Forbidden",
    },
  ],
}
`;

exports[`LogServer: patch /runs/:run ('participant' / 'sqlite') > refuses to change the status of a run from 'interrupted' to 'idle' 1`] = `
{
  "errors": [
    {
      "code": "INVALID_STATUS_TRANSITION",
      "detail": "Cannot change run status from interrupted to idle. Allowed transitions are: interrupted -> running or interrupted -> canceled.",
      "status": "Forbidden",
    },
  ],
}
`;

exports[`LogServer: patch /runs/:run ('participant' / 'sqlite') > refuses to change the status of a run from 'running' to 'idle' 1`] = `
{
  "errors": [
    {
      "code": "INVALID_STATUS_TRANSITION",
      "detail": "Cannot change run status from running to idle. Allowed transitions are: running -> interrupted, running -> canceled, or running -> completed.",
      "status": "Forbidden",
    },
  ],
}
`;

exports[`LogServer: patch /runs/:run ('participant' / 'sqlite') > refuses to complete a run if there are pending logs 1`] = `
{
  "errors": [
    {
      "code": "PENDING_LOGS",
      "detail": "Cannot complete run with pending logs. Ensure all logs are added to the run before completing it.",
      "status": "Forbidden",
    },
  ],
}
`;
